# crawl_google_paa

./: .gitignore  README.md  google_paa.py  pyproject.toml  requirements.txt  run_multiple.py  webdrivermanager.py
notebooks/: clean-and-cluster-paa.ipynb  generate-faq-queries-csv.ipynb  google-paa-experiment.ipynb  paa-post-processing-with-volume.ipynb  paa-post-processing.ipynb
test/: software engineer - Google Search.html  test_google_paa.py
test/software engineer - Google Search_files/: m=IkchZc,QPfswe,Uuupec,r36a9c,xj7LNb  m=ZuqZhb,c3JEL  rs=AA2YrTseNuAM2ahbnPVIqOBPSoURlOo9Og  rs=ACT90oH9RC7bDi7GeNDYJ50u0p4JqixJwA
